force-app/main/default/objects/Venue__c/fields/Access_code__c.field-meta.xml
<CustomField>
    <fullName>Access_Code__c</fullName>
    <label>Access Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>