force-app/main/default/objects/Venue__c/fields/Access_instructions__c.field-meta.xml
<CustomField>
    <fullName>Access_instructions__c</fullName>
    <label>Access instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>