force-app/main/default/objects/Venue__c/fields/Access_method__c.field-meta.xml
<CustomField>
    <fullName>Access_method__c</fullName>
    <label>Access method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always open</fullName>
            </value>
            <value>
                <fullName>Opened for us</fullName>
            </value>
            <value>
                <fullName>Pin code entry</fullName>
            </value>
            <value>
                <fullName>Key entry</fullName>
            </value>
            <value>
                <fullName>Key and pin code entry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>