force-app/main/default/objects/Venue__c/fields/Audio_Visual_Equipment_Available__c.field-meta.xml
<CustomField>
    <fullName>Audio_Visual_Equipment_Available__c</fullName>
    <label>Audio/Visual Equipment Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>