force-app/main/default/objects/Venue__c/fields/Baby_Changing_Facilities__c.field-meta.xml
<CustomField>
    <fullName>Baby_Changing_Facilities__c</fullName>
    <label>Baby Changing Facilities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>