force-app/main/default/objects/Venue__c/fields/Cancellation_terms__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_terms__c</fullName>
    <label>Cancellation terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>