force-app/main/default/objects/Venue__c/fields/Client_Link__c.field-meta.xml
<CustomField>
    <fullName>Client_Link__c</fullName>
    <label>Client Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>