force-app/main/default/objects/Venue__c/fields/Delivery_Mechanism__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Mechanism__c</fullName>
    <label>Delivery Mechanism</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Zoom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>