force-app/main/default/objects/Venue__c/fields/Deposit_paid__c.field-meta.xml
<CustomField>
    <fullName>Deposit_paid__c</fullName>
    <label>Deposit paid</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>