force-app/main/default/objects/Venue__c/fields/Deposit_paid_date__c.field-meta.xml
<CustomField>
    <fullName>Deposit_paid_date__c</fullName>
    <label>Deposit paid date</label>
    <type>Date</type>
</CustomField>