force-app/main/default/objects/Venue__c/fields/Deposit_return_terms__c.field-meta.xml
<CustomField>
    <fullName>Deposit_return_terms__c</fullName>
    <label>Deposit return terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>