force-app/main/default/objects/Venue__c/fields/Does_a_pet_live_at_the_venue__c.field-meta.xml
<CustomField>
    <fullName>Does_a_pet_live_at_the_venue__c</fullName>
    <label>Does a pet live at the venue?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>