force-app/main/default/objects/Venue__c/fields/Easily_accessible_by_public_transport__c.field-meta.xml
<CustomField>
    <fullName>Easily_accessible_by_public_transport__c</fullName>
    <label>Easily accessible by public transport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>