force-app/main/default/objects/Venue__c/fields/Facility_Notes__c.field-meta.xml
<CustomField>
    <fullName>Facility_Notes__c</fullName>
    <label>Facility Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>