force-app/main/default/objects/Venue__c/fields/Free_Venue__c.field-meta.xml
<CustomField>
    <fullName>Free_Venue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Venue?</label>
    <type>Checkbox</type>
</CustomField>