force-app/main/default/objects/Venue__c/fields/Full_Disabled_Access__c.field-meta.xml
<CustomField>
    <fullName>Full_Disabled_Access__c</fullName>
    <label>Full Disabled Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>