force-app/main/default/objects/Venue__c/fields/Google_Map_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Map_Link__c</fullName>
    <label>Google Map Link</label>
    <type>Url</type>
</CustomField>