force-app/main/default/objects/Venue__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Venues</relationshipLabel>
    <relationshipName>Venues</relationshipName>
    <type>Lookup</type>
</CustomField>