force-app/main/default/objects/Venue__c/fields/Host_parking_details__c.field-meta.xml
<CustomField>
    <fullName>Host_parking_details__c</fullName>
    <label>Host parking details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>