force-app/main/default/objects/Venue__c/fields/Host_Password__c.field-meta.xml
<CustomField>
    <fullName>Host_Password__c</fullName>
    <label>Host Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>