force-app/main/default/objects/Venue__c/fields/Host_Username__c.field-meta.xml
<CustomField>
    <fullName>Host_Username__c</fullName>
    <label>Host Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>