force-app/main/default/objects/Venue__c/fields/Hot_Drink_Facilities_Available__c.field-meta.xml
<CustomField>
    <fullName>Hot_Drink_Facilities_Available__c</fullName>
    <label>Hot Drink Facilities Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>