force-app/main/default/objects/Venue__c/fields/Information_for_host__c.field-meta.xml
<CustomField>
    <fullName>Information_for_host__c</fullName>
    <label>Information for host</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>