force-app/main/default/objects/Venue__c/fields/Is_it_used_as_a_polling_station__c.field-meta.xml
<CustomField>
    <fullName>Is_it_used_as_a_polling_station__c</fullName>
    <label>Is it used as a polling station?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>