force-app/main/default/objects/Venue__c/fields/Key_holders__c.field-meta.xml
<CustomField>
    <fullName>Key_holders__c</fullName>
    <label>Key holders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>