force-app/main/default/objects/Venue__c/fields/Kitchen_Available__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Available__c</fullName>
    <label>Kitchen Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>