force-app/main/default/objects/Venue__c/fields/Lunch_Available_Locally__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Available_Locally__c</fullName>
    <label>Lunch Available Locally</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>