force-app/main/default/objects/Venue__c/fields/Main_Venue__c.field-meta.xml
<CustomField>
    <fullName>Main_Venue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Venue</label>
    <type>Checkbox</type>
</CustomField>