force-app/main/default/objects/Venue__c/fields/Map_Link__c.field-meta.xml
<CustomField>
    <fullName>Map_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://www.google.co.uk/maps?q=&quot; &amp;  Postcode__c,  Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map Link</label>
    <type>Text</type>
</CustomField>