force-app/main/default/objects/Venue__c/fields/Map_Url__c.field-meta.xml
<CustomField>
    <fullName>Map_Url__c</fullName>
    <formula>IF(ISBLANK(Host__c),
 &quot;https://www.google.co.uk/maps?q=&quot; &amp;  Postcode__c,
 &quot;https://www.google.co.uk/maps?q=&quot; &amp;  Host__r.MailingPostalCode
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map Url</label>
    <type>Text</type>
</CustomField>