force-app/main/default/objects/Venue__c/fields/Other_Charges__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges__c</fullName>
    <label>Other Charges</label>
    <length>255</length>
    <type>Text</type>
</CustomField>