force-app/main/default/objects/Venue__c/fields/Parent_parking_details__c.field-meta.xml
<CustomField>
    <fullName>Parent_parking_details__c</fullName>
    <label>Parent parking details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>