force-app/main/default/objects/Venue__c/fields/Parents_To_Bring_Birth_Ball_Cushion__c.field-meta.xml
<CustomField>
    <fullName>Parents_To_Bring_Birth_Ball_Cushion__c</fullName>
    <label>Parents To Bring Birth Ball/Cushion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>