force-app/main/default/objects/Venue__c/fields/Payment_terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_terms__c</fullName>
    <label>Payment terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>