force-app/main/default/objects/Venue__c/fields/Pet_At_Venue__c.field-meta.xml
<CustomField>
    <fullName>Pet_At_Venue__c</fullName>
    <label>Pet At Venue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>