force-app/main/default/objects/Venue__c/fields/Postcode_District__c.field-meta.xml
<CustomField>
    <fullName>Postcode_District__c</fullName>
    <formula>LEFT(
	Postcode__c,
	(FIND(&quot; &quot;, Postcode__c) - 1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Postcode District</label>
    <type>Text</type>
</CustomField>