force-app/main/default/objects/Venue__c/fields/PSA_Area__c.field-meta.xml
<CustomField>
    <fullName>PSA_Area__c</fullName>
    <formula>TEXT(Branch__r.PSA_Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSA Area</label>
    <type>Text</type>
</CustomField>