force-app/main/default/objects/Venue__c/fields/Room_Ready_Immediately__c.field-meta.xml
<CustomField>
    <fullName>Room_Ready_Immediately__c</fullName>
    <label>Room Ready Immediately</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>