force-app/main/default/objects/Venue__c/fields/Set_Up_Tidy_Time_Included__c.field-meta.xml
<CustomField>
    <fullName>Set_Up_Tidy_Time_Included__c</fullName>
    <inlineHelpText>In minutes – enter 0 if none</inlineHelpText>
    <label>Set Up / Tidy Time Included</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>