force-app/main/default/objects/Venue__c/fields/Space_Access_For_Buggies_Prams__c.field-meta.xml
<CustomField>
    <fullName>Space_Access_For_Buggies_Prams__c</fullName>
    <label>Space &amp; Access For Buggies &amp; Prams</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>