force-app/main/default/objects/Venue__c/fields/Storage_Facilities_Between_Events__c.field-meta.xml
<CustomField>
    <fullName>Storage_Facilities_Between_Events__c</fullName>
    <label>Storage Facilities Between Events</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>