force-app/main/default/objects/Venue__c/fields/Street_address__c.field-meta.xml
<CustomField>
    <fullName>Street_address__c</fullName>
    <label>Street address</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>