force-app/main/default/objects/Venue__c/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Reunion</fullName>
            </value>
            <value>
                <fullName>One off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>