force-app/main/default/objects/Venue__c/fields/Suitability_for_courses__c.field-meta.xml
<CustomField>
    <fullName>Suitability_for_Courses__c</fullName>
    <label>Suitability for Courses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Antenatal Classes</fullName>
            </value>
            <value>
                <fullName>Postnatal Classes</fullName>
            </value>
            <value>
                <fullName>Baby Massage Classes</fullName>
            </value>
            <value>
                <fullName>Reunion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>