force-app/main/default/objects/Venue__c/fields/Suitable_for_season_s__c.field-meta.xml
<CustomField>
    <fullName>Suitable_for_Season_s__c</fullName>
    <label>Suitable for Season(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spring</fullName>
            </value>
            <value>
                <fullName>Summer</fullName>
            </value>
            <value>
                <fullName>Autumn</fullName>
            </value>
            <value>
                <fullName>Winter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>