force-app/main/default/objects/Venue__c/fields/Supplier_Account__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Supplier does not exist.</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Organization</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplier Venues</relationshipLabel>
    <relationshipName>Supplier_Account</relationshipName>
    <type>Lookup</type>
</CustomField>