force-app/main/default/objects/Venue__c/fields/Town__c.field-meta.xml
<CustomField>
    <fullName>Town__c</fullName>
    <label>Town</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>