force-app/main/default/objects/Venue__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial/Community</fullName>
            </value>
            <value>
                <fullName>Practitioner Home</fullName>
            </value>
            <value>
                <fullName>Volunteer Home</fullName>
            </value>
            <value>
                <fullName>Parent Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>