force-app/main/default/objects/Venue__c/fields/Used_as_Polling_Station__c.field-meta.xml
<CustomField>
    <fullName>Used_as_Polling_Station__c</fullName>
    <label>Used as Polling Station</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_UNKNOWN</valueSetName>
    </valueSet>
</CustomField>