force-app/main/default/objects/Venue__c/fields/Venue_Info_For_Flow__c.field-meta.xml
<CustomField>
    <fullName>Venue_Info_For_Flow__c</fullName>
    <formula>Name &amp; BR()
&amp;  Street_Address__c &amp; BR()
&amp;  Town__c &amp; BR()
&amp;  County__c &amp; BR()
&amp; Postcode__c &amp; BR() &amp; BR()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Venue Info For Flow</label>
    <type>Text</type>
</CustomField>