force-app/main/default/objects/Venue__c/fields/Venue_Schedule_Link__c.field-meta.xml
<CustomField>
    <fullName>Venue_Schedule_Link__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_260)) + &#39;lightning/r/Report/&#39;+$Setup.Course_Settings__c.Venue_Schedule_Report_ID__c + &#39;/view?fv0=&#39; + Id,&#39;Venue Schedule&#39;, &#39;_blank&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Venue Schedule Link</label>
    <type>Text</type>
</CustomField>