force-app/main/default/objects/Venue__c/fields/Venue_website__c.field-meta.xml
<CustomField>
    <fullName>Venue_website__c</fullName>
    <label>Venue website</label>
    <type>Url</type>
</CustomField>