force-app/main/default/objects/Venue__c/fields/When_is_this_venue_available__c.field-meta.xml
<CustomField>
    <fullName>When_is_this_venue_available__c</fullName>
    <label>When is this venue available?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>