force-app/main/default/objects/Venue__c/fields/When_is_Venue_Available__c.field-meta.xml
<CustomField>
    <fullName>When_is_Venue_Available__c</fullName>
    <label>When is Venue Available</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>