force-app/main/default/objects/Venue__c/fields/Zoom_Details__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Details__c</fullName>
    <label>Zoom Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>