force-app/main/default/objects/Venue__c/recordTypes/Physical.recordType-meta.xml
<RecordType>
    <fullName>Physical</fullName>
    <active>true</active>
    <label>Physical</label>
</RecordType>