force-app/main/default/objects/Venue__c/recordTypes/Virtual.recordType-meta.xml
<RecordType>
    <fullName>Virtual</fullName>
    <active>true</active>
    <label>Virtual</label>
</RecordType>