force-app/main/default/objects/Venue__c/validationRules/Branch_Should_Be_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Branch_Should_Be_Populated</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName == &#39;Physical&#39; &amp;&amp; ISBLANK(Branch__c) &amp;&amp; 
NOT($Permission.Override_Venue_Validation)</errorConditionFormula>
    <errorDisplayField>Branch__c</errorDisplayField>
    <errorMessage>You must choose a branch for this venue.</errorMessage>
</ValidationRule>