force-app/main/default/objects/Venue__c/validationRules/Delivery_Mechanism_Populating.validationRule-meta.xml
<ValidationRule>
    <fullName>Delivery_Mechanism_Populating</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(RecordType.DeveloperName == &#39;Virtual&#39;, ISBLANK(TEXT(Delivery_Mechanism__c))),
AND(RecordType.DeveloperName != &#39;Virtual&#39;, NOT(ISBLANK(TEXT(Delivery_Mechanism__c))))
)</errorConditionFormula>
    <errorMessage>Delivery Mechanism must be populated for Virtual venues only</errorMessage>
</ValidationRule>