force-app/main/default/objects/Venue__c/validationRules/Physical_Venue_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Physical_Venue_Required_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName == &#39;Physical&#39;,
OR(ISNULL(Postcode__c), ISNULL(Town__c), ISNULL(TEXT(Type__c)), ISNULL(Subtype__c))
)</errorConditionFormula>
    <errorMessage>Postcode, Town, Type and Subtype are required fields</errorMessage>
</ValidationRule>