force-app/main/default/objects/Venue__c/validationRules/Populate_Host_if_Type_Practitioner_Home.validationRule-meta.xml
<ValidationRule>
    <fullName>Populate_Host_if_Type_Practitioner_Home</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName == &#39;Physical&#39;,
    OR(
       AND(ISBLANK(Host__c),
           ISPICKVAL(Type__c, &quot;Practitioner Home&quot;)),
       AND(NOT(ISBLANK(Host__c)),
           NOT(ISPICKVAL(Type__c, &quot;Practitioner Home&quot;)))
    ),
    NOT($Permission.Override_Venue_Validation)
)</errorConditionFormula>
    <errorDisplayField>Host__c</errorDisplayField>
    <errorMessage>Host should be populated if, and only if, the Venue is a Practitioner Home.</errorMessage>
</ValidationRule>