force-app/main/default/objects/Venue__c/validationRules/Populate_Latitude_and_Longitude.validationRule-meta.xml
<ValidationRule>
    <fullName>Populate_Latitude_and_Longitude</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Location__c ) &amp;&amp; 
NOT($Permission.Override_Venue_Validation)</errorConditionFormula>
    <errorMessage>Latitude and Longitude fields should be completed.</errorMessage>
</ValidationRule>