force-app/main/default/objects/Venue__c/validationRules/Populate_Location_if_Type_Not_ParentHome.validationRule-meta.xml
<ValidationRule>
    <fullName>Populate_Location_if_Type_Not_ParentHome</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Location__c ) &amp;&amp; 
NOT(ISPICKVAL(Type__c, &quot;Parent Home&quot;)) &amp;&amp;
NOT($Permission.Override_Venue_Validation)</errorConditionFormula>
    <errorMessage>Latitude and Longitude fields should be completed if the Venue isn&#39;t a Parent Home.</errorMessage>
</ValidationRule>