force-app/main/default/objects/Venue__c/validationRules/Populate_Street_Address_for_Public_Venue.validationRule-meta.xml
<ValidationRule>
    <fullName>Populate_Street_Address_for_Public_Venue</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName == &#39;Physical&#39; &amp;&amp;
ISBLANK(Street_Address__c ) &amp;&amp; 
NOT(ISPICKVAL(Type__c, &quot;Practitioner Home&quot;)) &amp;&amp;
NOT($Permission.Override_Venue_Validation)</errorConditionFormula>
    <errorDisplayField>Street_Address__c</errorDisplayField>
    <errorMessage>Street address is mandatory for public venues.</errorMessage>
</ValidationRule>