force-app/main/default/objects/Venue__c/validationRules/Postcode_Must_Contain_Space.validationRule-meta.xml
<ValidationRule>
    <fullName>Postcode_Must_Contain_Space</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	NOT(CONTAINS(Postcode__c, &quot; &quot;)),
	NOT($Permission.Override_Venue_Validation)
)</errorConditionFormula>
    <errorDisplayField>Postcode__c</errorDisplayField>
    <errorMessage>Postcode must contain at least one space</errorMessage>
</ValidationRule>