force-app/main/default/objects/Venue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PSA_Area__c</columns>
    <columns>Postcode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>