force-app/main/default/objects/Venue__c/listViews/X2B_All_Venues.listView-meta.xml
<ListView>
    <fullName>X2B_All_Venues</fullName>
    <columns>NAME</columns>
    <columns>Postcode__c</columns>
    <columns>Town__c</columns>
    <columns>Branch__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PSA_Area__c</field>
        <operation>equals</operation>
        <value>2B</value>
    </filters>
    <label>2B - All Venues</label>
    <sharedTo>
        <group>X2B_PSA_Area</group>
    </sharedTo>
</ListView>