force-app/main/default/objects/Venue__c/listViews/X3F_All_Venues.listView-meta.xml
<ListView>
    <fullName>X3F_All_Venues</fullName>
    <columns>NAME</columns>
    <columns>Postcode__c</columns>
    <columns>Town__c</columns>
    <columns>Branch__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PSA_Area__c</field>
        <operation>equals</operation>
        <value>3F</value>
    </filters>
    <label>3F - All Venues</label>
    <sharedTo>
        <group>X3F_PSA_Area</group>
    </sharedTo>
</ListView>